k8s/test/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-develop
  labels:
    app: example-develop
spec:
  selector:
    matchLabels:
      app: example-develop
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: example-develop
    spec:
      containers:
        - name: example-app
          image: nexus-registry.codikup-qa.com/admin/registry-default/testapp:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: registry-default
      nodeSelector:
        tier: develop
