k8s/test/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-develop-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "example.nkpetrov.k8s-dev.codikup-qa.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-develop-service
                port:
                  number: 80
