k8s/test/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-develop-service
spec:
  selector:
    app: example-develop
  ports:
    - name: http1
      protocol: TCP
      port: 80
      targetPort: 8080
